# multisim-neuro

./: .buildinfo  .gitignore  CITATION.cff  LICENSE  README.md  api.html  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js
.github/workflows/: draft-pdf.yml  publish-pypi.yml  publishing-pypi.yml  sphinx.yml
_sources/: index.rst.txt
_sources/tutorial/: 03-multisim_intersubject_noise.ipynb.txt  04-multisim_cross_temporal_generalization.ipynb.txt  05-multisim_effect_size.ipynb.txt  06-under_the_hood.ipynb.txt  index.rst.txt  multisim_basic.ipynb.txt  multisim_kernel.ipynb.txt
api/: index.html
docs/source/: api.rst  conf.py  fullLogo.ai  index.rst  modules.rst
docs/source/api/: index.rst  meeg_simulator.rst  multisim.rst
docs/source/reference/: index.rst  meeg_simulator.rst  meeg_simulator.simulator.rst
docs/source/tutorial/: 01-multisim_basic.ipynb  02-multisim_kernel.ipynb  03-multisim_intersubject_noise.ipynb  04-multisim_cross_temporal_generalization.ipynb  05-multisim_effect_size.ipynb  06-mathematical_details.ipynb  06-under_the_hood.ipynb  06_under_the_hood.ipynb  07-mathematical_details.ipynb  07_under_the_hood.ipynb  index.rst  meeg_simulator_basic.ipynb  meeg_simulator_effect_size.ipynb  meeg_simulator_intersubject_noise.ipynb  meeg_simulator_kernel.ipynb  using_meeg_simulator.ipynb
meeg_simulator/: __init__.py  simulator.py
multisim/: simulator.py
paper/: figure1.py  paper.bib  paper.md
tests/: test_main.py
tutorial/: 01-multisim_basic.html  02-multisim_kernel.html  03-multisim_intersubject_noise.html  04-multisim_cross_temporal_generalization.html  05-multisim_effect_size.html  06-mathematical_details.html  06-under_the_hood.html  06_under_the_hood.html  07-mathematical_details.html  index.html  meeg_simulator_basic.html  meeg_simulator_basic.ipynb  meeg_simulator_effect_size.html  meeg_simulator_intersubject_noise.html  meeg_simulator_kernel.html  multisim_basic.html  multisim_effect_size.html  multisim_intersubject_noise.html  multisim_kernel.html
