[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "multisim-neuro"
dynamic = ["version"]
description = "Simulate realistic MEG/EEG data with ground-truth multivariate effects"
authors = [
    { name = "Alex Lepauvre", email = "alex.lepauvre@gmail.com" },
    { name = "Qian Chu" },
    { name = "Lucia Melloni" },
    { name = "Peter Zeidman" }
]
license = { file = "LICENSE" }
readme = "README.md"
dependencies = ["scipy", "pandas"]

[project.optional-dependencies]
export = ["mne", "eeglabio"]
docs = ["mne", "eeglabio", "scikit-learn", "pydata-sphinx-theme", "numpydoc", "nbsphinx", "ruff", "ipython", "sphinxcontrib-bibtex", "myst-nb"]
dev = ["pytest"]

[project.urls]
Homepage = "https://github.com/AlexLepauvre/multisim-neuro"
Repository = "https://github.com/AlexLepauvre/multisim-neuro"

[tool.setuptools]
packages = ["multisim"]  # Automatically find the package

[tool.setuptools.package-data]
"multisim" = ["*.json", "*.csv"]  # Include additional data files if needed

[tool.setuptools.dynamic]
version = {attr = "multisim.__version__"}